--- a/Front-end/src/assets/css/Icon.css
+++ b/Front-end/src/assets/css/Icon.css
@@ -1,3 +1,10 @@
+/*!
+ * Font Awesome v4
+ * Copyright 2011-2019
+ * Config file by : Dao Huy Duc
+ * Version: 1.1
+ */
+
 @font-face {
     font-family: 'FontAwesome';
     src: url('../fonts/fontawesome-webfont.eot?v=4.7.0');
