--- a/Front-end/src/app/scenes/containers/LoginWrapper/styles.css
+++ b/Front-end/src/app/scenes/containers/LoginWrapper/styles.css
@@ -2,3 +2,8 @@
     background: url('./images/bg.png') no-repeat;
     background-size: cover;
 }
+.consLg {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+}
