--- a/Front-end/src/assets/css/Site.css
+++ b/Front-end/src/assets/css/Site.css
@@ -1952,34 +1952,38 @@ pre code {
 
 .form-control:focus {
     color: #495057;
-    background-color: #fff;
     border-color: #80bdff;
+    background-color: #fff;
     outline: 0;
-    box-shadow: 0 0 0 .2rem rgba(0, 123, 255, .25)
 }
 
 .form-control::-webkit-input-placeholder {
     color: #6c757d;
+    font-size: 13px;
     opacity: 1
 }
 
 .form-control::-moz-placeholder {
     color: #6c757d;
+    font-size: 13px;
     opacity: 1
 }
 
 .form-control:-ms-input-placeholder {
     color: #6c757d;
+    font-size: 13px;
     opacity: 1
 }
 
 .form-control::-ms-input-placeholder {
     color: #6c757d;
+    font-size: 13px;
     opacity: 1
 }
 
 .form-control::placeholder {
     color: #6c757d;
+    font-size: 13px;
     opacity: 1
 }
 
@@ -3963,7 +3967,6 @@ input[type=submit].btn-block {
 .custom-select:focus {
     border-color: #80bdff;
     outline: 0;
-    box-shadow: 0 0 0 .2rem rgba(0, 123, 255, .25)
 }
 
 .custom-select:focus::-ms-value {
