--- a/Front-end/src/assets/css/Site.css
+++ b/Front-end/src/assets/css/Site.css
@@ -10320,5 +10320,14 @@ a.text-dark:hover {
         width: 80% !important; 
     }
 }
+.tall {
+    border: 0;
+    height: 1px;
+    background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.20), rgba(0,0,0,0));
+    background-image: -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.20), rgba(0,0,0,0));
+    background-image: -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.20), rgba(0,0,0,0));
+    background-image: -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.20), rgba(0,0,0,0));
+    margin: 0;
+}
 /* END HEADER */
 
