--- a/Front-end/src/app/scenes/pages/HomeAdmin/SectionClassRoom/components/LabelYears/styles.css
+++ b/Front-end/src/app/scenes/pages/HomeAdmin/SectionClassRoom/components/LabelYears/styles.css
@@ -1,6 +1,7 @@
 .labelYears {
     width: 100%;
     height: 100%;
+    position: relative;
     display: block;
 }
 
@@ -16,4 +17,10 @@
     text-transform: uppercase;
     font-weight: 900;
     font-size: 16px;
+}
+
+.sortClass {
+    position: absolute;
+    top: 10px;
+    right: 0;
 }
