--- a/Front-end/src/app/scenes/pages/LoginPage/Panel/components/FormPanel/styles.css
+++ b/Front-end/src/app/scenes/pages/LoginPage/Panel/components/FormPanel/styles.css
@@ -5,12 +5,15 @@
     font-size: 13px;
     height: auto;
 }
+
 .uName {
     background: #fff url('http://thisinh.thithptquocgia.edu.vn/Content/bootstrap/images/user.png') no-repeat 95% center;
 }
+
 .uPass {
     background: #fff url('http://thisinh.thithptquocgia.edu.vn/Content/bootstrap/images/locked.png') no-repeat 95% center;
 }
+
 .captcha {
     margin-top: 10px;
 }
@@ -20,10 +23,31 @@
     color: #ffffff;
     border: 1px solid #43a343;
 }
+
 form {
     border: 0;
     padding: 0 40px 0 0;
     border-right: 1px solid #ccc;
     border-radius: 0;
     box-shadow: none;
+}
+
+.hidden {
+    display: none;
+}
+
+.show {
+    border-radius: 7px;
+    border: 1px solid #d6d6d6;
+    display: block;
+    padding: 10px;
+    background-color: #ffd2d2;
+}
+
+.show p {
+    display: block;
+    color: red;
+    margin: 0;
+    line-height: 18px;
+    font-size: 10px;
 }
