--- a/Front-end/src/assets/css/Site.css
+++ b/Front-end/src/assets/css/Site.css
@@ -218,10 +218,10 @@ button {
     border-radius: 0
 }
 
-button:focus {
+/* button:focus {
     outline: 1px dotted;
     outline: 5px auto -webkit-focus-ring-color
-}
+} */
 
 button,
 input,
