--- a/Front-end/src/app/scenes/components/Header/styles.css
+++ b/Front-end/src/app/scenes/components/Header/styles.css
@@ -1,8 +1,7 @@
 .headerMain {
     width: 100%;
+    padding: 2px 0 0 0;
     background-color: #455e6b;
-    padding-top: 5px;
-    padding-bottom: 5px;
 }
 
 .ctn {
