--- a/Front-end/src/app/scenes/components/Logo/styles.css
+++ b/Front-end/src/app/scenes/components/Logo/styles.css
@@ -1,11 +1,10 @@
 .logo {
-    width: 100%;
     height: 100%;
     position: relative;
 }
 .logoBig {
-    width: 334px;
-    height: 56px;
+    width: 310px;
+    height: 43px;
     display: inline-block;
-    background: url('http://thisinh.thithptquocgia.edu.vn/Content/bootstrap/images/logo-big.png') no-repeat;
+    background: url('./images/a.png') no-repeat;
 }
