--- a/Front-end/src/app/scenes/components/Menu/VerticalMenuAdmin/styles.css
+++ b/Front-end/src/app/scenes/components/Menu/VerticalMenuAdmin/styles.css
@@ -5,5 +5,5 @@
     height: 100%;
     background-color: #ffffff;
     border-right: 1px solid #f7f7f7;
-    padding:10px;
+    padding: 5px 10px;
 }
