--- a/Front-end/src/app/scenes/components/Header/styles.css
+++ b/Front-end/src/app/scenes/components/Header/styles.css
@@ -4,6 +4,10 @@
     background-color: #455e6b;
 }
 
+.headerMain input {
+    font-size: 14px;
+}
+
 .ctn {
     padding-right: 30px;
     padding-left: 30px;
