--- a/Front-end/src/app/scenes/pages/ManageAccount/TabBars/styles.css
+++ b/Front-end/src/app/scenes/pages/ManageAccount/TabBars/styles.css
@@ -11,8 +11,9 @@
 .appBar a {
     height: 100%;
     display: inline-block;
+    font-weight: 600;
     color: #333;
-    padding: 20px 25px;
+    padding: 15px 25px;
 }
 
 .appBar a:hover {
