--- a/Front-end/src/app/scenes/pages/ManageAccount/PopupFormEdit/styles.css
+++ b/Front-end/src/app/scenes/pages/ManageAccount/PopupFormEdit/styles.css
@@ -4,3 +4,11 @@
 .rightContent {
     width: 100%;
 }
+
+.avatar {
+    width: 192px;
+    height: 192px;
+    max-width: 100%;
+    max-height: 100%;
+    overflow: hidden;
+}
