--- a/Front-end/src/app/scenes/components/Menu/VerticalMenuAdmin/components/TopMenu/styles.css
+++ b/Front-end/src/app/scenes/components/Menu/VerticalMenuAdmin/components/TopMenu/styles.css
@@ -1,12 +1,13 @@
 .headerTopMenu {
     background-color: #566e7a;
     padding: 0 10px;
-    margin-bottom: 5px;
+    margin-bottom: 6px;
+    border-radius: 4px;
 }
 
 .headerTopMenu  img {
     width: 50px;
-    margin-top: 5px;
+    margin-top: 7px;
     border-radius: 4px;
 }
 
@@ -19,8 +20,8 @@
     display: block;
     width: 100%;
     font-size: 12px;
-    font-weight: 100;
-    color: #ffffff;
+    font-weight: 300;
+    color: #fff;
     padding: 6px 10px;
 }
 
