--- a/Front-end/src/app/scenes/containers/LoginWrapper/styles.css
+++ b/Front-end/src/app/scenes/containers/LoginWrapper/styles.css
@@ -1,5 +1,5 @@
 .login {
-    background: url('./images/bg.png') no-repeat;
+    background-color: #455e6b;
     height: 1000px;
     background-size: cover;
 }
