--- a/Front-end/src/app/scenes/components/Menu/VerticalMenuAdmin/components/LeftContent/styles.css
+++ b/Front-end/src/app/scenes/components/Menu/VerticalMenuAdmin/components/LeftContent/styles.css
@@ -2,6 +2,8 @@
     display: block;
     position: relative;
     width: 100%;
+    height: 100%;
+    background-color: #ffffff;
 }
 
 .leftContent a {
