--- a/Front-end/src/app/scenes/components/Menu/VerticalMenuAdmin/styles.css
+++ b/Front-end/src/app/scenes/components/Menu/VerticalMenuAdmin/styles.css
@@ -3,7 +3,6 @@
     position: relative;
     width: 100%;
     height: 100%;
-    background-color: #ffffff;
+    background-color: #fafafa;
     border-right: 1px solid #f7f7f7;
-    padding: 5px 10px;
 }
