--- a/Front-end/src/assets/css/Normalize.css
+++ b/Front-end/src/assets/css/Normalize.css
@@ -19,7 +19,7 @@ a {
 strike {color: black;}
 body {
 	line-height:1;
-	font-family: 'Roboto' 'Open Sans' sans-serif;
+	font-family: 'Open Sans' sans-serif;
 	background-color: white !important;
 	font-size: 13px;
 	margin: 0;
