--- a/Front-end/src/app/scenes/pages/ManageAccount/TabBars/FormSign/styles.css
+++ b/Front-end/src/app/scenes/pages/ManageAccount/TabBars/FormSign/styles.css
@@ -1,17 +1,16 @@
 .formSign {
     width: 100%;
     display: inline-block;
-    padding: 15px 24px 30px 24px;
+    padding: 30px 24px;
     background-color: #fff;
     margin-top: 25px;
-    border-radius: 4px;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,.05);
+    border-radius: 2px;
 }
-
 .formSign label {
     font-size: 14px;
     line-height: 18px;
 }
-
 .formSign h3 {
     margin-bottom: 30px;
     padding: 10px;
@@ -19,6 +18,6 @@
     background-color: #455e6b;
     font-weight: 300;
     color: #ffffff;
-    border-radius: 4px;
-    font-size: 22px;
+    border-radius: 2px;
+    font-size: 18px
 }
