--- a/Front-end/src/app/scenes/pages/ManageClass/TabBars/Years/FormAddNewYears/styles.css
+++ b/Front-end/src/app/scenes/pages/ManageClass/TabBars/Years/FormAddNewYears/styles.css
@@ -1,7 +1,7 @@
 .formAddNewYears {
     background-color: #fff;
-    padding: 24px;
-    margin-top: 24px;
+    padding: 30px 24px;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,.05);
 }
 
 .formAddNewYears h3 {
@@ -11,6 +11,6 @@
     background-color: #455e6b;
     font-weight: 300;
     color: #ffffff;
-    border-radius: 4px;
-    font-size: 22px;
+    border-radius: 2px;
+    font-size: 18px;
 }
