--- a/Front-end/src/app/scenes/pages/ManageClass/TabBars/Years/styles.css
+++ b/Front-end/src/app/scenes/pages/ManageClass/TabBars/Years/styles.css
@@ -1,7 +1,13 @@
+.Years {
+    width: 100%;
+    height: 100%;
+    display: block;
+    margin-top: 24px;
+}
 .actionBarManageClass {
     background-color: white;
-    padding: 1px 10px;
-    border-radius: 4px;
-    margin-top: 24px;
+    padding: 20px 10px;
+    border-radius: 2px;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,.05);
     height: 100%;
 }
