--- a/Front-end/src/assets/css/Normalize.css
+++ b/Front-end/src/assets/css/Normalize.css
@@ -11,6 +11,7 @@ html {height: 100%; background-color: white;}
 ul, li {
 	list-style: none;
 	padding: 0;
+	font-size: 13px;
 }
 a {
 	text-decoration: none !important;
