--- a/Front-end/src/assets/css/Site.css
+++ b/Front-end/src/assets/css/Site.css
@@ -10345,7 +10345,7 @@ tr > td.cell {font-size: 12px !important; padding: 0 20px !important;}
     color: white;
     font-weight: 300;
     background-color: #566e7a;
-    border-radius: 4px;
+    border-radius: 2px;
     text-align: center;
 }
 
@@ -10469,7 +10469,7 @@ tr > td.cell {font-size: 12px !important; padding: 0 20px !important;}
 .message {
     background-color: #f7f7f7;
     margin-bottom: 5px;
-    border-radius: 5px;
+    border-radius: 2px;
 }
 .message ul li {
     line-height: 25px;
@@ -10480,14 +10480,47 @@ tr > td.cell {font-size: 12px !important; padding: 0 20px !important;}
 
 /* ACTIVE LINK */
 .activeLink {
-    background-color: rgba(0, 0, 0, 0.08) !important;
-    color: '#333 !important';
+    background-color: #455e6c !important;
+    color: #ffffff !important;
+}
+
+.activeLink span {
+    color: #ffffff !important;
+}
+
+.activeLink svg path {
+    color: white;
 }
 
 .reset-button {
     box-shadow: none !important;
-    padding: 10px 20px !important;
-    border-radius: 40px !important;
+}
+
+/* TAB-BAR */
+.appBar {
+    width: 100%;
+    display: block;
+    height: 100%;
+    background-color: #fff;
+    border-radius: 2px;
+    border: 1px solid #ececec;
+}
+
+.appBar a:first-child {
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+}
+
+.appBar a {
+    height: 100%;
+    display: inline-block;
+    color: #455e6b;
+    font-size: 13px;
+    padding: 10px 25px 7px;
+}
+
+.appBar a:hover {
+    background-color: #fafafa;
 }
 
 
