--- a/Front-end/src/app/scenes/components/Search/SearchYearAndCourse/styles.css
+++ b/Front-end/src/app/scenes/components/Search/SearchYearAndCourse/styles.css
@@ -16,14 +16,14 @@
 .formControlBorderless:hover, 
 .formControlBorderless:active, 
 .formControlBorderless:focus {
-    border: none;
-    outline: none;
-    box-shadow: none;
+    border: none !important;
+    outline: none !important;
+    box-shadow: none !important;
 }
 
 .cardBodyFix {
-    flex: 1 1 auto;
-    padding: 1px 18px;
+    flex: 1 1 auto !important;
+    padding: 1px 18px !important;
 }
 
 .buttonSearch {
@@ -37,10 +37,12 @@
 }
 
 .Select {
-    margin-left: 10px;
-    width: 145px;
-    height: 30px;
-    border-radius: 4px;
-    border: none;
+    width: 145px !important;
+    height: 30px !important;
+    border-radius: 4px !important;
+    border: none !important;
     outline: none !important;
+    background-color: #fff !important;
+    margin:  0 0 0 10px !important;
+    padding:  0 !important;
 }
