--- a/Front-end/src/app/scenes/pages/ManageClass/components/Class/components/EditClass/styles.css
+++ b/Front-end/src/app/scenes/pages/ManageClass/components/Class/components/EditClass/styles.css
@@ -1,6 +1,7 @@
 .formEditClass {
-	padding: 30px 50px;
-	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.05);
+	padding: 30px 39px;
+	border: 1px solid #ececec;
     border-radius: 2px;
+    background-color: white;
     font-size: 13px;
 }
