--- a/Front-end/src/app/scenes/pages/ManageAccount/components/EditAccount/styles.css
+++ b/Front-end/src/app/scenes/pages/ManageAccount/components/EditAccount/styles.css
@@ -1,13 +1,14 @@
 .formEditAccount {
-	padding: 30px 50px;
-	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.05);
+	padding: 30px 39px;
+	border: 1px solid #ececec;
     border-radius: 2px;
+    background-color: white;
     margin-top: 25px;
-    font-size: 13px;
+    font-size: 11px;
 }
 
 .popupForm p {
-    font-size: 13px;
+    font-size: 12px;
 }
 .rightContent {
     width: 100%;
