--- a/Front-end/src/app/scenes/pages/ManageAccount/components/FormSign/styles.css
+++ b/Front-end/src/app/scenes/pages/ManageAccount/components/FormSign/styles.css
@@ -1,14 +1,14 @@
 .formSign {
     width: 100%;
     display: inline-block;
-    padding: 30px 50px;
+    padding: 30px 39px;
     background-color: #fff;
     margin-top: 25px;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,.05);
+    border: 1px solid #ececec;
     border-radius: 2px;
 }
 .formSign label {
-    font-size: 14px;
+    font-size: 12px;
     line-height: 18px;
 }
 .formSign h3 {
