--- a/Front-end/src/app/scenes/pages/ManageClass/components/Years/components/FormAddNewYears/styles.css
+++ b/Front-end/src/app/scenes/pages/ManageClass/components/Years/components/FormAddNewYears/styles.css
@@ -1,7 +1,7 @@
 .formAddNewYears {
     background-color: #fff;
-    padding: 30px 50px;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,.05);
+    padding: 30px 39px;
+    border: 1px solid #ececec;
 }
 
 .formAddNewYears h3 {
