--- a/Front-end/src/app/scenes/pages/ManageClass/components/Years/styles.css
+++ b/Front-end/src/app/scenes/pages/ManageClass/components/Years/styles.css
@@ -8,6 +8,6 @@
     background-color: white;
     padding: 20px 10px;
     border-radius: 2px;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,.05);
+    border: 1px solid #ececec;
     height: 100%;
 }
