--- a/Front-end/src/app/scenes/pages/ManageClass/components/Class/components/TableList/components/ToolBar/styles.css
+++ b/Front-end/src/app/scenes/pages/ManageClass/components/Class/components/TableList/components/ToolBar/styles.css
@@ -4,7 +4,8 @@
     padding: 5px 15px;
     text-transform: none;
     border-radius: 4px;
-    border:  none;
+    border: none;
+    background-color: #faebd7;
 }
 
 .ToolBar button svg {
