--- a/Front-end/src/app/scenes/pages/ManageAccount/components/FormSign/styles.css
+++ b/Front-end/src/app/scenes/pages/ManageAccount/components/FormSign/styles.css
@@ -1,7 +1,7 @@
 .formSign {
     width: 100%;
     display: inline-block;
-    padding: 30px 24px;
+    padding: 30px 24px 80px;
     background-color: #fff;
     margin-top: 25px;
     border: 1px solid #ececec;
